# QtLingo

./: .appveyor.yml  .gitignore  CMakeLists.txt  Doxyfile  MainWindow_8cpp.html  MainWindow_8cpp.js  MainWindow_8h.html  MainWindow_8h_source.html  MyConstants_8h.html  MyConstants_8h_source.html  MyLanguageData_8h.html  MyLanguageModel_8cpp_source.html  MyLanguageModel_8h.html  MyLocalization_8cpp.html  MyLocalization_8cpp_source.html  MyLocalization_8h.html  MyLocalization_8h_source.html  MyOrgSettings_8cpp.html  MyOrgSettings_8cpp_source.html  MyOrgSettings_8h.html  MyOrgSettings_8h_source.html  MySqlDbtModel_8cpp.html  MySqlDbtModel_8cpp_source.html  MySqlDbtModel_8h_source.html  MyTranlatorParser_8cpp.html  QtLingo.pro  QtLingo.qrc  README.md  README_ar.md  README_de.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_no.md  README_ru.md  README_sv.md  README_zh-CN.md  README_zh_CN.md  SimpleCrypt_8h.html  (+197 more)
.github/workflows/: main.yml
DoxyFolder/html/: md_CODE_OF_CONDUCT.html  md_README.html  pages.html
android/: AndroidManifest.xml
config/: config.xml
desktop/: CMakeLists.txt  QtLingo.desktop
doc/: mydatatables.html  mysqldbtmodel.html  mytranslationfiles.html  qtlingo.index
doc/style/: style.css
help/: About-Author_ar.md  About-Author_de.md  About-Author_en.md  About-Author_es.md  About-Author_fr.md  About-Author_it.md  About-Author_ja.md  About-Author_no.md  About-Author_ru.md  About-Author_sv.md  About-Author_zh-CN.md  About-Author_zh_CN.md  About_es.md  About_fr.md  About_no.md  About_ru.md  Help_ar.md  Help_de.md  Help_en.md  Help_es.md  Help_fr.md  Help_it.md  Help_ja.md  Help_no.md  Help_ru.md  Help_sv.md  Help_zh_CN.md
html/: CODE__OF__CONDUCT_8md.html  MainWindow_8cpp.html  MainWindow_8cpp_source.html  MainWindow_8h.html  MainWindow_8h_source.html  MyConstants_8h.html  MyConstants_8h_source.html  MyDatatables_8cpp.html  MyDatatables_8cpp_source.html  MyDatatables_8h.html  MyDatatables_8h_source.html  MyOrgSettings_8cpp.html  MyOrgSettings_8cpp_source.html  MyOrgSettings_8h.html  MyOrgSettings_8h_source.html  MySimpleCrypt_8cpp.html  MySimpleCrypt_8cpp_source.html  MySimpleCrypt_8h.html  MySimpleCrypt_8h_source.html  MySqlDbtModel_8cpp.html  MySqlDbtModel_8cpp_source.html  MySqlDbtModel_8h_source.html  MyTranslationFiles_8cpp.html  MyTranslationFiles_8cpp_source.html  MyTranslationFiles_8h.html  MyTranslationFiles_8h_source.html  QExample_8md.html  QOnlineTts_8md.html  QOption_8md.html  ReadMe_8md.html  annotated.html  annotated_dup.js  classMainWindow-members.html  classMainWindow.html  classMainWindow.js  classMyConstants-members.html  classMyConstants.html  classMyConstants.js  classMyDatatables-members.html  classMyDatatables.html  (+467 more)
ios/: Info.plist
latex/: MainWindow_8cpp.tex  MySimpleCrypt_8cpp.tex  MySqlDbtModel_8h.tex  MyTranslationFiles_8cpp.tex  MyTranslationFiles_8h.tex  QOnlineTranslator_8md.tex  QOnlineTts_8md.tex  ReadMe_8md.tex  classMainWindow.tex  classMyConstants.tex  classMyDatatables.eps  classMyDatatables.tex  classMyLingoJobs.tex  classMyOrgSettings.tex  classMyProjectClass.tex  classMySqlDbtModel.tex  classMyTranslationFiles.tex  classMyTranslationJobs.tex  classQOnlineTranslator.eps  classQOnlineTranslator.tex  classQOnlineTts.eps  classQOnlineTts.tex  classQtLingo.tex  classTranslationFiles.tex  classnamespace.tex  dir_120ed4da3e3217b1e7fc0b4f48568e79.tex  dir_1c604483021778db19bc49e30df5cadf.tex  dir_1cbc81d7deb1c2fb8174e639ebe72b7f.tex  dir_28a083f4f6983168a4525eb7df1d313c.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_93501a11e921083efbd154e0cdff5f10.tex  dir_9b7f07cb4b8c380e9eee5ca21867bd58.tex  dir_afd47efe7cb30516bfa146ac19a62883.tex  dir_b3d6e4d03576d1ed6f7ff2fba17c9a5e.tex  dir_c79d55866cade848962d1b542975f616.tex  dir_da26a281d62b14bec13c53ade91ef937.tex  dir_dab08ec2ce817c3bf91fda0db00ec26d.tex  main_8cpp.tex  md_README.tex  md_help_ReadMe.tex  (+28 more)
macos/: Info.plist
scripts/: build_script.ps1  build_script.sh  install.sh
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_14.js  all_15.js  all_1b.js  all_2.js  all_4.js  all_8.js  all_9.js  all_b.js  all_e.js  classes_1.js  classes_3.js  classes_6.js  defines_3.js  defines_5.js  enums_1.js  enums_6.js  enums_7.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_12.js  enumvalues_13.js  enumvalues_15.js  enumvalues_16.js  enumvalues_18.js  enumvalues_2.js  enumvalues_7.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_d.js  enumvalues_f.js  files_4.js  files_5.js  functions_10.js  functions_12.js  (+16 more)
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MyConstants.h  MyDatatables.cpp  MyDatatables.h  MyLanguageData.cpp  MyLanguageModel.cpp  MyLanguageModel.h  MyLocalization.cpp  MyLocalization.h  MyOrgSettings.cpp  MyOrgSettings.h  MySimpleCrypt.cpp  MySimpleCrypt.h  MySqlDbtModel.cpp  MySqlDbtModel.h  MyTranlatorParser.cpp  MyTranlatorParser.h  MyTranslationFiles.cpp  MyTranslationFiles.h  SimpleCrypt.cpp  SimpleCrypt.h  main.cpp
translations/: QtLingo_ar.qm  QtLingo_ar.ts  QtLingo_ar_AR.qm  QtLingo_ar_AR.ts  QtLingo_de.qm  QtLingo_de.ts  QtLingo_de_DE.qm  QtLingo_de_DE.ts  QtLingo_en.qm  QtLingo_en.ts  QtLingo_en_US.qm  QtLingo_en_US.ts  QtLingo_es.qm  QtLingo_es.ts  QtLingo_es_ES.qm  QtLingo_es_ES.ts  QtLingo_fr.qm  QtLingo_fr.ts  QtLingo_fr_FR.qm  QtLingo_fr_FR.ts  QtLingo_it.qm  QtLingo_it.ts  QtLingo_it_IT.qm  QtLingo_it_IT.ts  QtLingo_ja.qm  QtLingo_ja.ts  QtLingo_ja_JA.qm  QtLingo_ja_JA.ts  QtLingo_no.qm  QtLingo_no.ts  QtLingo_no_NO.qm  QtLingo_no_NO.ts  QtLingo_ru.qm  QtLingo_ru.ts  QtLingo_ru_RU.qm  QtLingo_ru_RU.ts  QtLingo_sv.qm  QtLingo_sv.ts  QtLingo_sv_SV.qm  QtLingo_sv_SV.ts  (+4 more)
translations_new/: GalaxyCalculator2_es.ts  GalaxyCalculator2_es.txt  GalaxyCalculator2_fr.ts  GalaxyCalculator2_fr.txt  GalaxyCalculator2_sv.ts  GalaxyCalculator2_sv.txt  GalaxyCalculator_fr.ts  GalaxyCalculator_fr.txt  QmlWidgetTranslator_ar.ts  QtAppVeyor_es.ts  QtAppVeyor_es.txt  QtAppVeyor_sv.ts  QtLingo_es.ts  QtLingo_es.txt  QtLingo_no.ts  QtLingo_no.txt  QtLingo_ru.ts  QtLingo_ru.txt  QtLingo_zh_CN.ts  QtLingo_zh_CN.txt
(+943 files in other folders)
